--- a/package.json
+++ b/package.json
@@ -58,8 +58,7 @@
     "typescript": "^5.7.3",
     "vite": "^4.1.0",
     "vite-plugin-pwa": "^0.21.1",
-    "vitest": "^2.1.8",
-    "workbox-window": "^7.3.0"
+    "vitest": "^2.1.8"
   },
   "keywords": [
     "weather",
